--- a/src/app/home-page/home-page.component.html
+++ b/src/app/home-page/home-page.component.html
@@ -11,11 +11,13 @@
           href="https://optionslogger.com">OptionsLogger.com</a>
       </div>
       <div class="col-6 col-md my-1 text-center">
-        <a title="Retirement Income Calculator" href="hhttps://stackdividends.gumroad.com/l/RetirementIncomeCalculator"
-          ><img src="assets/Retirement-Income-Calculator-1.png" class="img-fluid rounded"
+        <a title="Retirement Income Calculator"
+          href="https://stackdividends.gumroad.com/l/RetirementIncomeCalculator"><img
+            src="assets/Retirement-Income-Calculator-1.png" class="img-fluid rounded"
             alt="Retirement Income Calculator" />
         </a>
-        <a class="fs-4 text-white" title="Retirement Income Calculator" href="https://zcarroll.gumroad.com/l/RetirementIncomeCalculator">Retirement Income Calculator</a>
+        <a class="fs-4 text-white" title="Retirement Income Calculator"
+          href="https://stackdividends.gumroad.com/l/RetirementIncomeCalculator">Retirement Income Calculator</a>
       </div>
       <div class="col-6 col-md my-1 text-center">
         <a title="Covered Call ETF Income Calculator" routerLink="/Calculators/CoveredCallETFIncome"
@@ -36,8 +38,8 @@
       <a target="_blank" href="https://gumroad.com/a/707294323/CSdwG"><img
           src="https://public-files.gumroad.com/variants/wa9fsdmbmvjuvkn1nzmbdtfwjcno/3298c3eb001bbed90f1d616da66708480096a0a1b6e81bd4f8a2d6e9b831d301"
           class="img-fluid rounded" title="Too Much Money" alt="Too Much Money" /></a>
-      <a target="_blank" class="text-white mt-2" title="Too Much Money"
-        href="https://gumroad.com/a/707294323/CSdwG">Too Much Money</a>
+      <a target="_blank" class="text-white mt-2" title="Too Much Money" href="https://gumroad.com/a/707294323/CSdwG">Too
+        Much Money</a>
     </div>
     <div class="col-6 col-md-3 my-1 text-center">
       <a target="_blank" title="Turbocharge Your Dividends" href="https://gumroad.com/a/304280691/DHxdC"><img
