--- a/src/app/covered-call-calculator/covered-call-calculator.component.html
+++ b/src/app/covered-call-calculator/covered-call-calculator.component.html
@@ -38,7 +38,7 @@
     <p>The form below contains Four Covered Call ETFs to select from ($QYLD, $QYLG, $XYLD, $XYLG, $RYLD). Once you have
         selected the desired ETF, then select the hypothetical Investment Amount ($100 - $1,000,000).
     </p>
-    <form style="font-size:1.5rem;" method="POST" class="form" id="calculator">
+    <form style="font-size:1.5rem;" method="POST" class="form" style="font-size:1.7rem;" id="calculator">
         <hr style="background:white; height:2px;" />
         <div class="row">
             <div class="col col-md-6">
