--- a/src/app/home-page/home-page.component.html
+++ b/src/app/home-page/home-page.component.html
@@ -3,14 +3,14 @@
     <h1>Web Applications - <i class="fa fa-bar-chart"></i></h1>
     <hr />
     <div class="row">
-      <div class="col-6 col-md my-1 text-center">
+      <div class="col-12 col-md my-1 text-center">
         <a target="_blank" title="OptionsLogger.com" href="https://optionslogger.com"><img src="assets/ol.jpg"
             class="img-fluid rounded" alt="OptionsLogger.com" />
         </a>
         <a target="_blank" class="fs-4 text-white" title="OptionsLogger.com"
           href="https://optionslogger.com">OptionsLogger.com</a>
       </div>
-      <div class="col-6 col-md my-1 text-center">
+      <div class="col-12 col-md my-1 text-center">
         <a title="Retirement Income Calculator"
           href="https://stackdividends.gumroad.com/l/RetirementIncomeCalculator"><img
             src="assets/Retirement-Income-Calculator-1.png" class="img-fluid rounded"
@@ -19,7 +19,7 @@
         <a class="fs-4 text-white" title="Retirement Income Calculator"
           href="https://stackdividends.gumroad.com/l/RetirementIncomeCalculator">Retirement Income Calculator</a>
       </div>
-      <div class="col-6 col-md my-1 text-center">
+      <div class="col-12 col-md my-1 text-center">
         <a title="Covered Call ETF Income Calculator" routerLink="/Calculators/CoveredCallETFIncome"
           routerLinkActive="active"><img src="assets/Covered-Call-ETF-Income-Calculator.png" class="img-fluid rounded"
             alt="Covered Call ETF Income Calculator" />
@@ -96,7 +96,7 @@
     </div>
   </div>
   <hr />
-  <div class="row my-1">
+  <div class="row my-1" style="display:none;">
     <h1>Ex. Monthly Dividend Portfolios - <i class="fa fa-calendar"></i></h1>
     <hr />
     <div class="row">
