--- a/src/app/home-page/home-page.component.html
+++ b/src/app/home-page/home-page.component.html
@@ -11,13 +11,18 @@
           href="https://optionslogger.com">OptionsLogger.com</a>
       </div>
       <div class="col-12 col-md my-1 text-center">
-        <a title="Retirement Income Calculator"
+        <!--<a title="Retirement Income Calculator"
           href="https://stackdividends.gumroad.com/l/RetirementIncomeCalculator"><img
+            src="assets/Retirement-Income-Calculator-1.png" class="img-fluid rounded"
+            alt="Retirement Income Calculator" />
+        </a>-->
+ 	<a title="Retirement Income Calculator"
+          href="Calculators/RetirementIncome"><img
             src="assets/Retirement-Income-Calculator-1.png" class="img-fluid rounded"
             alt="Retirement Income Calculator" />
         </a>
         <a class="fs-4 text-white" title="Retirement Income Calculator"
-          href="https://stackdividends.gumroad.com/l/RetirementIncomeCalculator">Retirement Income Calculator</a>
+          href="Calculators/RetirementIncome">Retirement Income Calculator</a>
       </div>
       <div class="col-12 col-md my-1 text-center">
         <a title="Covered Call ETF Income Calculator" routerLink="/Calculators/CoveredCallETFIncome"
