--- a/src/app/home-page/home-page.component.html
+++ b/src/app/home-page/home-page.component.html
@@ -16,13 +16,13 @@
             src="assets/Retirement-Income-Calculator-1.png" class="img-fluid rounded"
             alt="Retirement Income Calculator" />
         </a>-->
- 	<a title="Retirement Income Calculator"
-          href="Calculators/RetirementIncome"><img
+        <a title="Retirement Income Calculator" routerLink="Calculators/RetirementIncome" routerLinkActive="active"><img
             src="assets/Retirement-Income-Calculator-1.png" class="img-fluid rounded"
             alt="Retirement Income Calculator" />
         </a>
-        <a class="fs-4 text-white" title="Retirement Income Calculator"
-          href="Calculators/RetirementIncome">Retirement Income Calculator</a>
+        <a class="fs-4 text-white" title="Retirement Income Calculator" routerLink="Calculators/RetirementIncome"
+          routerLinkActive="active">Retirement
+          Income Calculator</a>
       </div>
       <div class="col-12 col-md my-1 text-center">
         <a title="Covered Call ETF Income Calculator" routerLink="/Calculators/CoveredCallETFIncome"
