--- a/src/app/video-intro/video-intro.component.html
+++ b/src/app/video-intro/video-intro.component.html
@@ -2,7 +2,7 @@
     <div class="row justify-content-center my-1">
         <div class="col-12 col-md-10 offset-md-1 p-3 rounded">
             <video playsinline webkit-playsinline class="video" controls controlsList="nodownload" width="100%"
-                src="assets/intro.mp4"></video>
+                src="assets/intro.mp4" poster="assets/intro-video-preview.png"></video>
         </div>
         <div class="col-12 col-md-10 offset-md-1 text-center my-2">
             <a routerLink="/" routerLinkActive="active"><button type="button"
