--- a/src/app/home-page/home-page.component.html
+++ b/src/app/home-page/home-page.component.html
@@ -122,7 +122,7 @@
       </div>
     </div>
   </div>
-  <hr />
+  <hr style="display:none;" />
   <p style="font-size:10px;">*<em><u>DISCLAIMER:</u></em> Some of the links above may
     contain affiliate links where the website owner may receive a small affiliate commission for recommending the
     product. I am not a financial advisor, the information provided throughout this website is desinged to be used
