--- a/src/app/video-intro/video-intro.component.html
+++ b/src/app/video-intro/video-intro.component.html
@@ -1,6 +1,6 @@
-<div class="container-fluid rounded pb-3 my-2">
-    <div class="row justify-content-center my-1">
-        <div class="col-12 col-md-10 offset-md-1 p-3 rounded">
+<div class="container-fluid rounded pb-3 mb-2">
+    <div class="row justify-content-center">
+        <div class="col-12 col-md-10 offset-md-1 p-1 rounded">
             <video playsinline webkit-playsinline class="video" controls controlsList="nodownload" width="100%"
                 src="assets/intro.mp4" poster="assets/intro-video-preview.png"></video>
         </div>
