--- a/src/app/video-intro/video-intro.component.html
+++ b/src/app/video-intro/video-intro.component.html
@@ -1,10 +1,10 @@
 <div class="container-fluid rounded pb-3 mb-2">
     <div class="row justify-content-center">
-        <div class="col-12 col-md-10 offset-md-1 p-1 rounded">
+        <div class="col-12 col-md-8 offset-md p-1 rounded">
             <video playsinline webkit-playsinline class="video" controls controlsList="nodownload" width="100%"
                 src="assets/intro.mp4" poster="assets/intro-video-preview.png"></video>
         </div>
-        <div class="col-12 col-md-10 offset-md-1 text-center my-2">
+        <div class="col-12 col-md-8 offset-md text-center my-2">
             <a routerLink="/" routerLinkActive="active"><button type="button"
                     class="btn btn-secondary shado btn-lg fs-2 p-3 w-100">Get Started ➡️</button></a>
         </div>
