--- a/src/app/dividend-calendar/dividend-calendar.component.html
+++ b/src/app/dividend-calendar/dividend-calendar.component.html
@@ -28,7 +28,7 @@
             <div class="col-12 col-md">
                 <h3 class="text-white bg-dark rounded col-12 col-md p-1">Consumer Based - 5 Stock Portfolio</h3>
                 <img src="assets/schedule.jpg" class="w-100" />
-                <p class="text-center">$WMT, $LOW, $SBUX, $MCD, $KO</p>
+                <p class="text-centerw">$WMT, $LOW, $SBUX, $MCD, $KO</p>
                 <hr style="background:white; height:2px;" />
             </div>
 
