--- a/src/app/home-page/home-page.component.html
+++ b/src/app/home-page/home-page.component.html
@@ -11,6 +11,13 @@
           href="https://optionslogger.com">OptionsLogger.com</a>
       </div>
       <div class="col-12 col-md my-1 text-center">
+        <a target="_blank" title="BudgetLogger.com" href="https://budgetlogger.com"><img src="assets/budget-logger.jpg"
+            class="img-fluid rounded" alt="BudgetLogger.com" />
+        </a>
+        <a target="_blank" class="fs-4 text-white" title="BudgetLogger.com"
+          href="https://budgetlogger.com">BudgetLogger.com</a>
+      </div>
+      <div class="col-12 col-md my-1 text-center">
         <!--<a title="Retirement Income Calculator"
           href="https://stackdividends.gumroad.com/l/RetirementIncomeCalculator"><img
             src="assets/Retirement-Income-Calculator-1.png" class="img-fluid rounded"
