mortgage payment calculator

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -19,7 +19,7 @@
           Income</a>
         <a class="nav-link text-dark" routerLink="/Calculators/CoveredCallETFIncome" routerLinkActive="true">Covered
           Call
-          ETF</a>
+          Income</a>
       </div>
       <!-- </div> -->
       <!-- </div> -->
