--- a/src/app/mortgage-calculator/mortgage-calculator.component.html
+++ b/src/app/mortgage-calculator/mortgage-calculator.component.html
@@ -75,7 +75,6 @@
     </div>
     <hr />
     <div class="row">
-        <span class="col-12 text-center" style="font-size:12px;">*Disclaimer: Assumed investments are tax deferred.
-            (Roth
-            IRA, Roth 401k & Roth TSP). Fees or inflation are not included in calculation.*</span>
+        <span class="col-12 text-center" style="font-size:12px;">*Disclaimer: Assumed calculations do not include
+            closing costs & other associated fees. Pleas use this calculator for illustrative purposes only.*</span>
     </div>
