--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,12 +5,12 @@
     <a routerLink="/"><img src="https://pbs.twimg.com/profile_images/1276524849029091329/o-gDNBRM_400x400.jpg"
         alt="logo" style="width:75px; border-radius: 50%;" /></a>
 
-    <h6 class="m-2"><a title="Follow @StackDividends"
-        href="https://twitter.com/StackDividends?ref_src=twsrc%5Etfw">@StackDividends</a></h6>
+    <h5 class="m-2"><a title="Follow @StackDividends"
+        href="https://twitter.com/StackDividends?ref_src=twsrc%5Etfw">@StackDividends</a></h5>
 
     <!-- <a class="fs-3" routerLink="/">Cashflow Dividends</a> -->
     <div class="dropdown ms-auto">
-      <button class="btn btn-dark dropdown-toggle fs-4 text-center" type="button" id="dropdownMenuButton"
+      <button class="btn btn-dark dropdown-toggle fs-3 text-center" type="button" id="dropdownMenuButton"
         data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
         Calculators
       </button>
@@ -20,6 +20,8 @@
         <a class="nav-link text-dark" routerLink="/Calculators/CoveredCallETFIncome" routerLinkActive="true">Covered
           Call
           Income</a>
+        <a class="nav-link text-dark" routerLink="/Calculators/MortgagePayment" routerLinkActive="true">Mortgage
+          Payment</a>
       </div>
       <!-- </div> -->
       <!-- </div> -->
