--- a/src/app/home-page/home-page.component.html
+++ b/src/app/home-page/home-page.component.html
@@ -1,49 +1,9 @@
 <div class="container bg-black shawdow-lg rounded my-auto p-3 pb-3 mb-2" style="min-height:491px;">
   <div class="row my-1">
-    <h1>Web Applications - <i class="fa fa-bar-chart"></i></h1>
-    <hr />
-    <div class="row">
-      <div class="col-12 col-md my-1 text-center">
-        <a target="_blank" title="OptionsLogger.com" href="https://optionslogger.com"><img src="assets/ol.jpg"
-            class="img-fluid rounded" alt="OptionsLogger.com" />
-        </a>
-        <a target="_blank" class="fs-4 text-white" title="OptionsLogger.com"
-          href="https://optionslogger.com">OptionsLogger.com</a>
-      </div>
-      <div class="col-12 col-md my-1 text-center">
-        <a target="_blank" title="BudgetLogger.com" href="https://budgetlogger.com"><img src="assets/budget-logger.jpg"
-            class="img-fluid rounded" alt="BudgetLogger.com" />
-        </a>
-        <a target="_blank" class="fs-4 text-white" title="BudgetLogger.com"
-          href="https://budgetlogger.com">BudgetLogger.com</a>
-      </div>
-      <div class="col-12 col-md my-1 text-center">
-        <a title="Retirement Income Calculator" routerLink="Calculators/RetirementIncome" routerLinkActive="active"><img
-            src="assets/Retirement-Income-Calculator-1.png" class="img-fluid rounded"
-            alt="Retirement Income Calculator" />
-        </a>
-        <a class="fs-4 text-white" title="Retirement Income Calculator" routerLink="Calculators/RetirementIncome"
-          routerLinkActive="active">Retirement
-          Income Calculator</a>
-      </div>
-      <div class="col-12 col-md my-1 text-center">
-        <a title="Covered Call ETF Income Calculator" routerLink="/Calculators/CoveredCallETFIncome"
-          routerLinkActive="active"><img src="assets/Covered-Call-ETF-Income-Calculator.png" class="img-fluid rounded"
-            alt="Covered Call ETF Income Calculator" />
-        </a>
-        <a class="fs-4 text-white" title="Covered Call ETF Income Calculator" routerLink="/Calculators/RetirementIncome"
-          routerLinkActive="active">Covered Call ETF
-          Calculator</a>
-      </div>
-    </div>
-  </div>
-  <hr />
-  <div class="row my-1">
     <h1>Recommended eBooks - <i class="fa fa-book"></i></h1>
     <hr />
     <div class="col-6 col-md-3 my-1 text-center">
-      <a target="_blank" href="https://gumroad.com/a/707294323/CSdwG"><img
-          src="https://public-files.gumroad.com/variants/wa9fsdmbmvjuvkn1nzmbdtfwjcno/3298c3eb001bbed90f1d616da66708480096a0a1b6e81bd4f8a2d6e9b831d301"
+      <a target="_blank" href="https://gumroad.com/a/707294323/CSdwG"><img src="assets/too-much-money-ebook.jpg"
           class="img-fluid rounded" title="Too Much Money" alt="Too Much Money" /></a>
       <a target="_blank" class="text-white mt-2" title="Too Much Money" href="https://gumroad.com/a/707294323/CSdwG">Too
         Much Money</a>
@@ -64,10 +24,10 @@
     </div>
     <div class="col-6 col-md-3 my-1 text-center">
       <a target="_blank" title="10 Forever Dividend Stocks" href="https://gumroad.com/a/707294323/geCIq"><img
-          src="assets/10-forever-dividend-stocks.jpg" class="img-fluid rounded" alt="10 Forever Dividend Stocks" />
+          src="assets/10-forever-dividend-stocks-1.jpg" class="img-fluid rounded" alt="10 Forever Dividend Stocks" />
       </a>
       <a target="_blank" class="text-white mt-2" href="https://gumroad.com/a/707294323/geCIq"
-        title="Get Paid While You Wait">10 Forever Dividend Stocks</a>
+        title="10 Forever Dividend Stocks">10 Forever Dividend Stocks</a>
     </div>
   </div>
   <div class="row my-1">
@@ -100,6 +60,78 @@
           alt="Open a Brokerage Account with Crypto.com" /></a>
       <a target="_blank" class="fs-4 text-white" title="Open a Brokerage Account with Robinhood"
         href="https://crypto.com/">Crypto.com</a>
+    </div>
+  </div>
+  <hr />
+  <div class="row my-1">
+    <h1>Free Calculators - <i class="fa fa-bar-chart"></i></h1>
+    <hr />
+    <div class="row">
+      <div class="col-12 col-md my-1 text-center">
+        <a title="Retirement Income Calculator" routerLink="Calculators/RetirementIncome" routerLinkActive="active"><img
+            src="assets/Retirement-Income-Calculator-1.png" class="img-fluid rounded"
+            alt="Retirement Income Calculator" />
+        </a>
+        <a class="fs-4 text-white" title="Retirement Income Calculator" routerLink="Calculators/RetirementIncome"
+          routerLinkActive="active">Retirement
+          Income Calculator</a>
+      </div>
+      <div class="col-12 col-md my-1 text-center">
+        <a title="Covered Call ETF Income Calculator" routerLink="/Calculators/CoveredCallETFIncome"
+          routerLinkActive="active"><img src="assets/Covered-Call-ETF-Income-Calculator.png" class="img-fluid rounded"
+            alt="Covered Call ETF Income Calculator" />
+        </a>
+        <a class="fs-4 text-white" title="Covered Call ETF Income Calculator" routerLink="/Calculators/RetirementIncome"
+          routerLinkActive="active">Covered Call ETF
+          Calculator</a>
+      </div>
+      <div class="col-12 col-md my-1 text-center">
+        <a title="Mortgage Payment Calculator" routerLink="/Calculators/MortgagePayment" routerLinkActive="active"><img
+            src="assets/mortgage-payment-calculator.jpg" class="img-fluid rounded" alt="Mortgage Payment Calculator" />
+        </a>
+        <a class="fs-4 text-white" title="Mortgage Payment Calculator" routerLink="/Calculators/MortgagePayment"
+          routerLinkActive="active">Mortgage Payment Calculator</a>
+      </div>
+    </div>
+  </div>
+  <hr />
+
+  <div class="row my-1">
+    <h1>Web Applications - <i class="fa fa-bar-chart"></i></h1>
+    <hr />
+    <div class="row">
+      <div class="col-12 col-md my-1 text-center">
+        <a target="_blank" title="OptionsLogger.com" href="https://optionslogger.com"><img src="assets/ol.jpg"
+            class="img-fluid rounded" alt="OptionsLogger.com" />
+        </a>
+        <a target="_blank" class="fs-4 text-white" title="OptionsLogger.com"
+          href="https://optionslogger.com">OptionsLogger.com</a>
+      </div>
+      <div class="col-12 col-md my-1 text-center">
+        <a target="_blank" title="BudgetLogger.com" href="https://budgetlogger.com"><img src="assets/budget-logger.jpg"
+            class="img-fluid rounded" alt="BudgetLogger.com" />
+        </a>
+        <a target="_blank" class="fs-4 text-white" title="BudgetLogger.com"
+          href="https://budgetlogger.com">BudgetLogger.com</a>
+      </div>
+      <!-- <div class="col-12 col-md my-1 text-center">
+            <a title="Retirement Income Calculator" routerLink="Calculators/RetirementIncome" routerLinkActive="active"><img
+                src="assets/Retirement-Income-Calculator-1.png" class="img-fluid rounded"
+                alt="Retirement Income Calculator" />
+            </a>
+            <a class="fs-4 text-white" title="Retirement Income Calculator" routerLink="Calculators/RetirementIncome"
+              routerLinkActive="active">Retirement
+              Income Calculator</a>
+          </div>
+          <div class="col-12 col-md my-1 text-center">
+            <a title="Covered Call ETF Income Calculator" routerLink="/Calculators/CoveredCallETFIncome"
+              routerLinkActive="active"><img src="assets/Covered-Call-ETF-Income-Calculator.png" class="img-fluid rounded"
+                alt="Covered Call ETF Income Calculator" />
+            </a>
+            <a class="fs-4 text-white" title="Covered Call ETF Income Calculator" routerLink="/Calculators/RetirementIncome"
+              routerLinkActive="active">Covered Call ETF
+              Calculator</a>
+          </div> -->
     </div>
   </div>
   <hr />
