--- a/src/app/mortgage-calculator/mortgage-calculator.component.html
+++ b/src/app/mortgage-calculator/mortgage-calculator.component.html
@@ -14,25 +14,59 @@
                                     <input #purchasePrice type="tel"
                                         style="text-align:center;width: 75%; margin: auto; margin-bottom: 5px;"
                                         class="form-control input-lg text-center mt-1"
-                                        (keyup)="processKeyup(purchasePrice.value, downPayment.value, interestRate.value)" />
+                                        value="{{ purchasePrice.value | currency:'USD' }}"
+                                        (change)="processKeyup(purchasePrice.value, downPayment.value, interestRate.value)">
                                 </div>
                             </div>
                         </div>
                         <div class="col-12">
                             <div class="form-group form-group-lg">
                                 <label class="form-label">Down Payment:</label>
-                                <input #downPayment type="tel" style="width: 75%; margin: auto; margin-bottom: 5px;"
+                                <!-- <input #downPayment type="tel" style="width: 75%; margin: auto; margin-bottom: 5px;"
                                     class="form-control text-center mt-1 input-lg"
-                                    (keyup)="processKeyup(purchasePrice.value, downPayment.value, interestRate.value)" />
+                                    (keyup)="processKeyup(purchasePrice.value, downPayment.value, interestRate.value)" /> -->
+
+                                <select #downPayment style="width: 75%; margin: auto; margin-bottom: 5px;"
+                                    class="form-select text-center mt-1 input-lg"
+                                    (change)="processKeyup(purchasePrice.value, downPayment.value, interestRate.value)">
+                                    <option></option>
+                                    <option value=".03">3.00%</option>
+                                    <option value=".04">4.00%</option>
+                                    <option value=".05">5.00%</option>
+                                    <option value=".06">6.00%</option>
+                                    <option value=".07">7.00%</option>
+                                    <option value=".08">8.00%</option>
+                                    <option value=".09">9.00%</option>
+                                    <option value=".10">10.00%</option>
+                                    <option value=".15">15.00%</option>
+                                    <option value=".20">20.00%</option>
+                                </select>
                             </div>
                         </div>
 
                         <div class="col-12">
                             <div class="form-group form-group-lg">
                                 <label class="form-label">Interest Rate:</label>
-                                <input #interestRate type="tel" style="width: 75%; margin: auto; margin-bottom: 5px;"
+                                <!-- <input #interestRate type="tel" style="width: 75%; margin: auto; margin-bottom: 5px;"
                                     class="form-control mt-1 text-center input-lg"
-                                    (keyup)="processKeyup(purchasePrice.value, downPayment.value, interestRate.value)" />
+                                    (keyup)="processKeyup(purchasePrice.value, downPayment.value, interestRate.value)" /> -->
+
+                                <select #interestRate style="width: 75%; margin: auto; margin-bottom: 5px;"
+                                    class="form-select text-center mt-1 input-lg"
+                                    (change)="processKeyup(purchasePrice.value, downPayment.value, interestRate.value)">
+                                    <option></option>
+                                    <option value=".03">3.00%</option>
+                                    <option value=".0325">3.25%</option>
+                                    <option value=".0355">3.50%</option>
+                                    <option value=".0375">3.75%</option>
+                                    <option value=".04">4.00%</option>
+                                    <option value=".0425">4.25%</option>
+                                    <option value=".045">4.50%</option>
+                                    <option value=".0475">4.75%</option>
+                                    <option value=".05">5.00%</option>
+                                    <option value=".0525">5.25%</option>
+                                    <option value=".055">5.50%</option>
+                                </select>
                             </div>
 
                             <!-- <button type="button" class="btn btn-success w-100 btn-lg mt-4 fs-4"
@@ -54,6 +88,20 @@
                                 <div class="card-body">
                                     <h3 class="card-title">Mortgage Payment</h3>
                                     <p class="card-text">{{ mortgagePayment | currency:'USD' }}</p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-md-8 offset-md-2 col-10 offset-1 text-center">
+                    <div class="row">
+                        <div class="col-xs-1-12 p-4">
+                            <div class="card">
+                                <div class="card-body">
+                                    <h3 class="card-title">Down Payment</h3>
+                                    <p class="card-text">{{ downPaymentTotal | currency:'USD' }}</p>
                                 </div>
                             </div>
                         </div>
