--- a/src/app/mortgage-calculator/mortgage-calculator.component.scss
+++ b/src/app/mortgage-calculator/mortgage-calculator.component.scss
@@ -1,4 +1,8 @@
-form .form-control {
+form .form-control .form-select {
     width: 50%;
     margin: auto;
+}
+
+.form-select{
+    font-size: 1.5rem;
 }
